@@ -3858,7 +3858,7 @@ test chan-io-32.3 {Tcl_Read, negative byte count} {
     set l [list [catch {chan read $f -1} msg] $msg]
     chan close $f
     set l
-} {1 {bad argument "-1": should be "nonewline"}}
+} {1 {expected non-negative integer but got "-1"}}
 test chan-io-32.4 {Tcl_Read, positive byte count} {
     set f [open $path(longfile) r]
     set x [chan read $f 1024]
